libs/components/errors/testing/src/public-api.ts
export { SkyErrorFixture } from './legacy/error-fixture';

export { SkyErrorModalHarness } from './modules/error/error-modal-harness';
